# vscode-argocd

./: .gitignore  .prettierignore  .prettierrc  .vscodeignore  404.html  CHANGELOG.md  CONTRIBUTING.md  LICENSE.txt  README.md  index.html  mkdocs.yml  package-lock.json  package.json  pyproject.toml  sitemap.xml  tsconfig.json  webpack.config.js
commands/: index.html
commands/application/: index.html
commands/application/create-application/: index.html
commands/application/delete-application/: index.html
commands/application/edit-application/: index.html
commands/application/refresh-all-applications/: index.html
commands/cluster/: index.html
commands/codelens/: index.html
commands/connections/: index.html
commands/repository/: index.html
commands/show-output/: index.html
commands/template/: index.html
docs/: features.md  getting-started.md  index.md  troubleshoot.md
docs/commands/: index.md  show-output.md
features/: index.html
getting-started/: index.html
resources/templates/: basic-app.yaml  directory-app.yaml  helm-app.yaml  kustomize-app.yaml
search/: search_index.json
src/: commands.ts  extension.ts
src/model/: application.ts  applicationSetYaml.ts  applicationYaml.ts  cluster.ts  index.ts  repository.ts  repositoryYaml.ts
src/services/: configurationService.ts  connectionManager.ts  index.ts  outputChannel.ts  webviewService.ts
src/utils/: constants.ts  contextKeys.ts  helpers.ts  iconThemeUtils.ts  iconUtils.ts  index.ts  types.ts  yamlHelpers.ts
src/views/: views.ts
src/views/nodes/: index.ts  (+5 more)
troubleshoot/: index.html
(+128 files in other folders)
