[project]
name = "vscode-argocd"
version = "0.0.5"
description = "Manage Kubernetes Applications and Clusters using ArgoCD"
authors = [
    {name = "Harsh Paliwal",email = "harshpaliwal.developer@gmail.com"}
]
license = {text = "MIT License"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mkdocs (>=1.6.1,<2.0.0)",
    "mkdocs-git-revision-date-localized-plugin (>=1.5.0,<2.0.0)",
    "mkdocs-material[imaging] (>=9.7.0,<10.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
